# geo-deep-learning

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  22978945_15_clipped.tif  CITATION.cff  CreateDataset.py  Dockerfile  GDL.py  LICENSE  Metrics.md  README.md  Test_kornia.py  aoi_test.py  augmentation.py  classification_image.py  config.yaml  data_analysis.py  data_to_tiles.py  docker-compose.yml  dummy.txt  entrainement_modele.py  environment-gpu.yml  environment.yml  evaluate_segmentation.py  gdl_hyperopt_HPC.py  gdl_hyperopt_template.py  generate_jobfile.py  geo_inference_JF.py  image_classification.py  images_to_echantillons.py  images_to_samples.py  inference-prep_segmentation.py  inference.py  inference_classification.py  inference_postprocess.py  inference_production.py  inference_segmentation.py  inference_segmentation_dask.py  job_utils.py  (+38 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-template.md
.github/workflows/: build-on-tag.yml  build-push-on-release.yml  github-actions-ci.yml
.hydra/: config.yaml  hydra.yaml  overrides.yaml
MATTS/: gpkg_viewer.py  notepad.py  notepad.txt  notepad_in.py  notepad_show.py  reset_files.py  runner.py  viewer.py
MATTS/model_breakdowns/: deeplabv3_resnet101.html  test.html  unel.html
MATTS/pytorch-cnn-visualizations-master/: ref.txt
ci/data/: ci_csv.csv
conf/: .config_test_4channels_implementation.yaml.swo  .config_test_4channels_implementation.yaml.swp  README.md  config.canvecaux.yaml  config.coordconv.yaml  config.metasegm.yaml  config.yaml  config_canvecaux.yaml  config_ci_classification_local.yaml  config_ci_segmentation_local.yaml  config_ci_segmentation_wcs.yaml  config_ci_tst.yaml  config_ci_tst2.yaml  config_coordconv.yaml  config_data_analysis.yaml  config_job.yaml  config_kingston_remi_test.yaml  config_metasegm.yaml  config_template.yaml  config_test_4channels_implementation.yaml
conf/development/: config_test_4channels_implementation.yaml
conf/travis_CI/: config_ci_classification_local.yaml  config_ci_segmentation_local.yaml
conf/v1.1.0/: config_metasegm.yaml
config/: README.md  ccmeo_production.yaml  config_template.yaml  config_template_minimum.yaml  environment39.yml  gdl_config_classification_template.yaml  gdl_config_segmentation_template.yaml  gdl_config_template.yaml  old_README.md  old_config_template.yaml  old_config_template_minimum.yaml
config/AWS/: s3_config.yaml
config/augmentation/: basic_augmentation.yaml  basic_augmentation_segmentation.yaml
config/callbacks/: default_callbacks.yaml
config/data/: data.yaml
config/dataset/: NRCAN_individual_tree.yaml  README.md  ccmeo_datacube_dataset.yaml  ccmeo_datacube_sat_dataset.yaml  test_ci_classification_dataset.yaml  test_ci_dataset.yaml  test_ci_segmentation_binary.yaml  test_ci_segmentation_binary_RGBL.yaml  test_ci_segmentation_binary_stac.yaml  test_ci_segmentation_dataset.yaml  test_ci_segmentation_multiclass.yaml  test_ci_segmentation_multiclass_RGBL.yaml
config/development/: config_test_4channels_implementation.yaml
config/evaluate/: default_evaluate.yaml
config/hydra/: default.yaml  save.yaml
config/inference/: README.md  default_binary.yaml  default_inference.yaml  default_multiclass.yaml  production.yaml
config/logger/: mlflow.yaml
config/logging/: mlflow.yaml
config/model/: checkpoint_unet.yaml  deeplabv3+_pretrained.yaml  deeplabv3_pretrained.yaml  deeplabv3_resnet101_dualhead.yaml  deeplabv3_smp.yaml  deeplabv3plus_smp.yaml  fastrcnn.yaml  fcn_resnet101.yaml  gdl_deeplabv3-dualhead.yaml  gdl_hrnet.yaml  gdl_segformer.yaml  unet.yaml  (+18 more)
configs/: 01BG001_gaspe.yaml  01BG002_gaspe.yaml  01BG003_gaspe.yaml  02NB000.yaml  02NB000_test.yaml  __init__.py  combined_gaspe_train.yaml  combined_gaspe_train_1stbckp.yaml  config.yaml  dofa_config.yaml  dofa_config_RGB.yaml  hrnet_ocr_config_SAR.yaml  huron_water_extraction_full.yaml  log_config.yaml  logging_config.py  mae_config_RGB.yaml  segformer_config.yaml  segformer_config_RGB.yaml  swinclassifier_config_RGB.yaml  swinmae_config_RGB.yaml  swinunet_config_RGB.yaml  unet_config_SAR.yaml  unetplus_config_RGB.yaml
data/: 22978945_15.tif  22978945_15_uint8_clipped.tif  23429155_15.tif  23429155_15_uint8_clipped.tif  DATA_INFO.txt  ci_csv.csv  colormap.csv  images_to_samples_ci_csv.csv  inference.csv  inference_classif_ci_csv.csv  inference_sem_seg_ci_csv.csv  massachusetts_buildings.gpkg
datamodule/: segmentation_datamodule.py
dataset/: README.md  aoi.py  create_dataset.py  stacitem.py
docs/: Makefile  README.md  data_analysis.md
example/: README.md
geo-deep-learning/: train.py
geo_deep_learning/: __init__.py  train.py
inference/: GridGeoSamplerPlus.py  InferenceDataModule.py  InferenceDataset.py  SingleBandItemEO.py
losses/: README.md  __init__.py  boundary_loss.py  dice_loss.py  duo_loss.py  focal_loss.py  lovasz_loss.py  ohem_loss.py
models/: MECnet.py  README.md  TernausNet.py  checkpointed_unet.py  common.py  coordconv.py  deeplabv3_dualhead.py  densenet.py  fcn_vgg.py  inception.py  mobilenet.py  model_choice.py  resnet.py  seg_hrnet_ocr.py  segformer.py  spp_nets.py  unet.py  unet_context.py  xception.py
notebooks/: 00_quickstart.ipynb  README.md  __init__.py
postprocess/: BUIL.model3  FORE.model3  ROAI.model3  WAER.model3
slurm/: create_valid_lidar_mask.sh  download_dtm_dsm.sh  prepare_data.sh
solaris_gdl/: __init__.py
tests/: Test_stack.py  __init__.py  test_aoi.py  test_inference_dask.py  test_inference_segmentation.py  test_notebooks_00quickstart.py  test_tiling_segmentation.py  test_utils_models.py  test_utils_raster.py  test_utils_tensors.py  test_verify_segmentation.py
utils/: CreateDataset.py  NIR_modules.py  README.md  adabound.py  aoiutils.py  augmentation.py  aws.py  create_dataset.py  csv_write.py  data_analysis.py  geoutils.py  hydra_utils.py  inference.py  layersmodules.py  logger.py  logging.conf  loss.py  metrics.py  optimizer.py  preprocess.py  readers.py  script_model.py  tracker.py  tracker_basic.py  utils.py  verifications.py  visualization.py
(+291 files in other folders)
